--- a/ads/lovexpricelistad.html
+++ b/ads/lovexpricelistad.html
@@ -18,7 +18,7 @@ body {
 <!-- InstanceBeginEditable name="head" --><!-- InstanceEndEditable -->
 </head>
 
-<body><!-- InstanceBeginEditable name="ad" --><img src="../updates/October2014/Website Ad &amp; Banners, Buttons/specialholidayad.jpg" width="845" height="1107" alt="Special Holiday Ad Prices" /><!-- InstanceEndEditable -->
+<body><!-- InstanceBeginEditable name="ad" --><img src="specialholidayad.jpg" width="845" height="1107" alt="Special Holiday Ad Prices" /><!-- InstanceEndEditable -->
 </body>
 
 <!-- InstanceEnd --></html>
