--- a/classifieds.html
+++ b/classifieds.html
@@ -83,9 +83,11 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
 <div class="bodytxt" id="articlebody">
             <div id="articlepic"> </div>
               <p class="editorsnote">We can help your business do more business on the website as well as the print edition. Online Classified Ads attract tens of thousands of consumers and retailers everyday. For an introductory price, any classified ad placed in the print edition will be included on the website. The Love Express online is becoming the fastest growing newspaper online since its inception the web has gained numerous reviews. </p>
-              <p class="editorsnote"></p>
               <div id="classifieds">
-                <p class="qa">Artech Church Interiors</p>
+                <p class="qa">Poetry</p>
+                <p><strong>Need Customized  Poetry?</strong> Contact customizeyoursentiments.com<br>
+                  Over 35 years of  experience 877-735-4151. </p>
+<p class="qa">Artech Church Interiors</p>
                 <p><strong>Pew upholstery, Refinishing &amp; Repairs</strong>. New pews, cushioned church chairs, pulpit furniture, Replace carpet, lighting, painting &amp; full church design &amp; renovation. 100% financing available. Call <strong>1-800-222-Pews (7397)</strong> free Estimates.<a href="http://www.artechchurchInteriors.com"><strong> www.artechchurchInteriors.com</strong></a>.</p>
                 <p class="qa">Accreditation/Home Study</p>
                 <p><strong>Ministerial Licensing, Church Charters, Theology, Ministry, Counseling</strong> <strong>Degree&rsquo;s and Education</strong>. Distant learning programs - certification and endorsement, Contact NYCFGTS (Seminary and Association of Full Gospel Counselors Ministers and Churches: Dr. G.<strong> 239-596-8681, <a href="http://www.nyc fgts.org">www.nyc fgts.org</a></strong>.</p>
@@ -120,7 +122,7 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
                 <p class="qa">United Prayer</p>
                 <p><strong>Calling all intercessors, prayer warriors, ministers of the gospel, apostles, prophets, pastors, teachers to the Upper Room</strong>, 1710 Eastern Parkway every Saturday morning at 7:00 for United Prayer. Let us not hold our peace: For further information call <strong>888-231-9127</strong>.</p>
                 
-              </div>
+            </div>
             </div>
 <!-- InstanceEndEditable --> 
               <div id="textnav"><a href="index.htm">Home</a>&nbsp;|&nbsp;<a href="events.html">Regional Events</a>&nbsp;|&nbsp;<a href="features.htm">Features</a>&nbsp;|&nbsp;<a href="classifieds.htm">The Classifieds</a> &nbsp;|&nbsp;<a href="aboutus.html">About Us</a>&nbsp;|&nbsp;<span class="style3">Commentary</span>&nbsp;|&nbsp;<span class="style3">Community</span>&nbsp;|&nbsp;<span class="style3">Links</span></div> 
