--- a/edithstranges.html
+++ b/edithstranges.html
@@ -3,7 +3,7 @@
 <html><!-- InstanceBegin template="/Templates/lovexcss2.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>Women of the Bible</title>
+<title>Editorial</title>
 <!-- InstanceEndEditable -->
 <meta http-equiv="refresh" content="600">
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -89,12 +89,13 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
 <div id="articlepic">
   <img src="authors/strangesafter.jpg" width="200" alt="Edith Stranges"></div>            <h4><b>Editorial</b>            </h4>
 <div id="authorname">Edith Stranges</div>
-<p>Racism is easy to sweep under the rug, but churches are  coming together to sweep out and expose racism in whatever form it comes in.
-</p>
-<p>The church  must take the lead in the fight against the stronghold of racism. The power to  eradicate racism in the Body of Christ; We must keep on talking, and have a  dialogue with different pastors. It may hurt your pride, but the Bible says  &ldquo;...and the Truth will make you free.&rdquo; Here is one group led by a woman Pastor  who is a retired NYPD officer. Rev. Debra G. White. &ldquo;From my vantage point, I  see the divide as a matter of shared fear, shared disrespect but mostly  stubborn miscommunication.&rdquo; On Saturday, Sept. 20th, Bridging The  Divide: Police &amp; Community Dialogue was held at the Mount Car&shy;mel Baptist  Church, Arverne, NY. Their objective was to foster civil conversion in a  welcoming environment. Ma&shy;ny other churches and organizations are getting  involved such as New Life Tabernacle on Monday, October 13th, &ldquo;10-13 Man Down  Movement.&rdquo; This is our responsibility as children of God.</p>
-<p>Remember  October 31st is a Holy Day, not a feast for children to get involved with  Halloween. Protect your children. </p>
-<p align="right">Blessings.</p>
-<p><b><i>Write your comments to The  Love Express, 300 West 38th Street, NY, NY 10018. Email:love.express  @verizon.net</i></b></p>
+
+
+
+<p>It is a  blessing to be living in this time to see what God is doing and accomplishing.  It&rsquo;s a joy at 73 years of age to be seeing with my spiritual eyes all that God  is putting toge&shy;ther. </p>
+<p>One of the cries of my heart has been  &lsquo;Lord, make us one as you said you would do.&rsquo;  Many times I have cried and ask God how long will it be; what do we have to do;  as Saul cried out to God in Acts 9:6, Lord, what will thou have me to do. Then  it came after reading the account of the New  York CityServe meeting in the Christian Post  and having talked with many pastors and leaders, I&rsquo;ve heard the same  thing. <b>The spiritual climate is reaping. </b>The meeting together of the &lsquo;Old  Guard&rsquo; and the New Generation, coming under one banner, <b>JESUS</b>.</p>
+<p>My eyes have seen the glory of the  coming age; The devil cannot stop what God has begun in John 17 when <b>Jesus </b>prayed and said &lsquo;Lord, make them one.&rsquo; John  17:21. Do not be afraid. The Lord is your helper and comforter. Many times I&rsquo;ve  been to events, concerts, conferen&shy;ces, etc. where they have certain praise,  worship, hip-hop that I&rsquo;m not used to. I immediately turn it over to the Lord,  and said, &ldquo;Jesus take over; My heart be your heart.&rdquo; So move ahead with God.  Bless the Lord, oh my soul and all that is within me. Have a Holy day on  Thanksgiving.</p>
+
 </div>
           <!-- InstanceEndEditable --> 
               <div id="textnav"><a href="index.htm">Home</a>&nbsp;|&nbsp;<a href="events.html">Regional Events</a>&nbsp;|&nbsp;<a href="features.htm">Features</a>&nbsp;|&nbsp;<a href="classifieds.htm">The Classifieds</a> &nbsp;|&nbsp;<a href="aboutus.html">About Us</a>&nbsp;|&nbsp;<span class="style3">Commentary</span>&nbsp;|&nbsp;<span class="style3">Community</span>&nbsp;|&nbsp;<span class="style3">Links</span></div> 
