--- a/events.html
+++ b/events.html
@@ -116,50 +116,44 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
               <div class="bodytxt">
                 <div id="articlepic">
                   <div class="photocredits2"> </div>
-                  <img src="images/reneefrances.jpg" alt="" width="50" height="76" id="authorpic8" /><br>
+                  <img style="border:1px #666 solid" src="authors/charlottehall.jpg" height="75" alt="Charlotte Hall" /><br>
     </div>
-                <h2> 10th Pastoral Anniversary</h2>
-                <p>Rev. Dr. Renee Fran&shy;ces Washington Gardner is a woman of many firsts. When Har&shy;lem's renowned Bishop Preston Washington, Sr. passed away, she became not only the first woman elected Pastor   <strong> </strong>...<a href="reneefrances.html">Read More</a></p>
+                <h2>Silent No More!</h2>
+                <p>Hello  Beloved! Greetings in the last quarter of the year of 2014. Yes, time is  fleeting and here we are in the last quarter already. In the midst of these  dark days as the world continues to spiral out of <strong> </strong>...<a href="focuson.html">Read More</a></p>
+                <div id="articlepic">
+                  <div class="photocredits2"> </div>
+                  <img src="images/donaldreid.jpg" alt="" height="75" /><br>
+    </div>
+                <h2>November Tax Tips!</h2>
+                <p>Ask for a New Year's bonus instead of a Christmas bonus. By delaying your bonus by only a week, you can push the payment of taxes on the income 15 months into the future -- a year from next April ...<a href="donaldreid.html">Read More</a></p>
+                <div id="articlepic">
+                  <div class="photocredits2"> </div>
+                  <img src="images/dr-michael-scales-and-dr-roy-s-kirton-img1464.jpg" width="158" height="75" alt="Nyack College Alumns"><br>
+    </div>
+                <h2>Nyack College </h2>
+                <p><strong>Dr. Michael Scales</strong>,  President of <strong>Nyack College</strong>,  presented <strong>Dr. Roy S. Kirton</strong> with the <strong>2014 Alumnus of the Year Award</strong>, for  his service to society.&nbsp; Rev. Kirton is  the  <strong> </strong>...<a href="nyackcollege.html">Read More</a></p>
+                <div id="articlepic">
+                  <div class="photocredits2"> </div>
+                  <img src="images/bis-hez-walker-ms-gee-and-luis-palau.jpg" alt="" name="authorpic" width="108" height="75" id="authorpic" /><br>
+    </div>
+                <h2>AllAroundTown </h2>
+                <p><strong>The First Stop</strong> was at <strong>Calvary Baptist Church</strong> in Manhattan,  where <strong>Pastor Epstein</strong> is the senior  Pastor, for the City serve-City Fest. This  ministry is hosted by the <strong>Luis  Palau Foundation</strong>. <strong> </strong>...<a href="allroundtown.html">Read More</a></p>
                 <div id="articlepic">
                   <div class="photocredits2"> </div>
                   <br>
     </div>
-                <h2>Prayer for the Peace of Jerusalem </h2>
-                <p>The popular Instapray application will be partnering with the Day of Prayer for the Peace of Jerusalem (DPPJ), the largest global, grassroots prayer movement focused on prayer for   <strong> </strong>...<a href="dayofprayerpeacejerusalem.html">Read More</a></p>
-                <div id="articlepic">
-                  <div class="photocredits2"> </div>
-                  <br>
-    </div>
-                <h2>Solemn Assembly</h2>
-                <p>In every generation when God is about to do significant things He begins to use signs to confirm. The birth of Christ was confirmed with the sign of a star seen in the east. Signs in the moon and the sun   <strong> </strong>...<a href="solemassemblyfeast.html">Read More</a></p>
-                <div id="articlepic" style="height:75px; overflow:hidden;">
-                  <div class="photocredits2"> </div>
-                  <img src="images/MacPier2.jpg" width="66" height="99" alt="Mac Pier"><br>
-    </div>
-                <h2>Movement Day</h2>
-                <p>Thousands of leaders will be gathering in the Marriott Marquis on October 23rd, 8am-5pm,for the Fifth Annual Move&shy;ment Day. Plenary Spea&shy;kers: Host Mac Pier, Sam Adams, Jim De&shy;nison, ...<a href="movementday-mac-pier.html">Read More</a></p>
-                <div id="articlepic" style="text-align: right; width:75px; height:85px; overflow:hidden;">
-                  <div class="photocredits2"> </div>
-                  <img style="margin-left:-30px;" src="images/jasonalvarez.jpg" alt="" width="119" height="119" id="authorpic10" /><br>
-    </div>
-                <h2>A Night of Miracles Prayer/Healing/Praise </h2>
-                <p>Come join us for A Night of Miracles and powerful worship with Pastor Jason A&shy;l&shy;varez &amp; Friends and the Love of Jesus Family Church as we in&shy;vite you to a Special Night of Pra&shy;yer, Healing &amp; Praise <strong> </strong>...<a href="whatsnewforministrytraining.html">Read More</a></p>
+                <h2>Justice's Men's Conference </h2>
+                <p>What is JusticeNYC? It's a men's conference featuring hundreds of men and over a dozen national organizations and churches that seek to combat sexual exploitation of women - whether that is    <strong> </strong>...<a href="justincemensconf.html">Read More</a></p>
                 <div id="articlepic" style="text-align: right; width:75px; height:85px; overflow:hidden;">
                   <div class="photocredits2"> </div>
                   <img style="margin-left:-10px;" src="images/paulettepolo.jpg" alt="" name="authorpic" width="91" height="111" id="authorpic11" /><br>
-    </div>
+  </div>
                 <h2>W.O.W. Warriors of Worship Conf</h2>
                 <p>Mantle of Power / Paulette Polo Mi&shy;nistries presents W.O.W. Warriors of Wor&shy;ship Conference, Thurs&shy;day-Saturday, No&shy;vember 13th-15th with Don &amp; Chris&shy;tine Potter, Steve Swan&shy;son, Julie Meyer  <strong> </strong>...<a href="wowwarriorsconf.html">Read More</a></p>
                 <div id="articlepic" style="text-align: right; width:75px; height:85px; overflow:hidden;">
                   <div class="photocredits2"> </div>
-                  <img src="images/jaredanderson.jpg" alt="" name="authorpic12" width="111" height="110" id="authorpic12" style="margin-left:-15px;" /><br>
-    </div>
-                <h2>Joysongs Conference </h2>
-                <p>Abundant Life Wor&shy;ship Ctr. presents Joysongs Con&shy;fe&shy;rence, Friday, (Worship Night)-Saturday, (All Day Wor&shy;ship Training), Octo&shy;ber 10th-11th, with worship lea&shy;der &amp; songwriter Jared   <strong> </strong>...<a href="joysongconference.html">Read More</a></p>
-                <div id="articlepic" style="text-align: right; width:75px; height:85px; overflow:hidden;">
-                  <div class="photocredits2"> </div>
                   <img style="margin-left:-25px;" src="images/tdjakes.jpg" alt="" name="authorpic" width="142" height="160" id="authorpic13" /><br>
-    </div>
+  </div>
                 <h2>T. D. Jakes Coming to NY</h2>
                 <p>Glory of God Chris&shy;tian Center invites you to our Em&shy;po&shy;werment Summit 2014 (Sunday, November 30th @ 4pm and Monday, De&shy;cem&shy;ber 1st @ 10am &amp; 4pm) - with Bishop T. D. Jakes, Bishop Tudor   <strong> </strong>...<a href="tdjakesnewyork.html">Read More</a></p>
                 <div id="articlepic">
@@ -170,40 +164,10 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
                 <p>Most people attend services on a Sunday morning with a need for God to meet, with an issue to be resolved, with a dilemma or with something that they want God to fix. They hope that something  <strong> </strong>...<a href="equipping-people-in-the-church.html">Read More</a></p>
                 <div id="articlepic">
                   <div class="photocredits2"> </div>
-                  <br>
-  </div>
-                <h2>Oasis Singles: Fall Celebration</h2>
-                <p>Hey singles, are you ready to take a break from everything and enjoy a much needed fun night out? You are invited to join hundreds of Christian singles of all ages, from all walks of life and from   <strong> </strong>...<a href="cindygaldalruperto.html">Read More</a></p>
-                <div id="articlepic">
-                  <div class="photocredits2"> </div>
-                  <img src="images/servelikejesuslogo.jpg" alt="" name="authorpic" width="109" height="72" id="authorpic3" /><br>
-    </div>
-                <h2> Server like Jesus</h2>
-                <p>When I think of the word rewarding, I think of pouring into people&rsquo;s lives. It is so rewarding to believe in people. It is also rewarding to watch people grow and excel because someone believed in them  <strong> </strong>...<a href="servelikejesus.html">Read More</a></p>
-                <div id="articlepic">
-                  <div class="photocredits2"> </div>
-                  <img src="images/israelhoughton2.jpg" alt="" name="authorpic" width="101" height="72" id="authorpic4" /><img src="images/evangelistdanielkolenda.png" alt="" name="authorpic" width="68" height="72" id="authorpic5" /><br>
-  </div>
-                <h2>Come and Rejoice October 18th </h2>
-                <p><strong>Aranha Foundation</strong> presents <strong>Come and Rejoice, October 18th, 6pm</strong> with Grammy Award-Winning  Gospel Singer <strong>Israel Houghton</strong> &amp;  New Breed and <strong>Evangelist Daniel</strong><strong> </strong>...<a href="comeandrejoice.html">Read More</a></p>
-                <div id="articlepic">
-                  <div class="photocredits2"> </div>
                   <img src="images/vickiewinans2.jpg" alt="Vickie Winans" name="authorpic" width="70" height="72" id="authorpic6" /><br>
-  </div>
+</div>
                 <h2>Giving Thanks to the King </h2>
                 <p>Bethel Gospel Ta&shy;ber&shy;nacle Worship &amp; Fine Arts in conjunction with H.O.P.E. for ex-offenders, Inc. &amp; New Be&shy;ginnings Center of Hope presents Giving Thanks to the King Year-End   <strong> </strong>...<a href="givingthankstotheking.html">Read More</a></p>
-                <div id="articlepic">
-                  <div class="photocredits2"> </div>
-                  <img src="images/councilwomandorothygoosbypastornovellaandbishoprobertharris1323lw01ser.jpg" alt="" name="authorpic" width="108" height="72" id="authorpic7" /><br>
-    </div>
-                <h2>50th Wedding Anniversary </h2>
-                <p>Pastor Novella Harris and Bishop Robert Harris of Grace Cathedral International in Uniondale, NY (Long Island), celebrated their 50th Wedding Anniversary with a Renewal of   <strong> </strong>...<a href="50WeddingAnniversary.html">Read More</a></p>
-                <div id="articlepic">
-                  <div class="photocredits2"> </div>
-                  <img src="images/revreinhardbonnke.png" alt="" name="authorpic" width="114" height="75" id="authorpic9" /><br>
-</div>
-                <h2>Rev. Reinhard Bonnke</h2>
-                <p>I&nbsp; am thrilled to announce that we will hold our  next <strong>Reinhard</strong> <strong>Bonnke</strong> Gos&shy;pel Crusade at the <strong>Nassau  Veterans Me&shy;mo&shy;rial Co&shy;li&shy;seum</strong> in <strong>Long  Island, NY </strong>on <strong>Nov. 14th-15th, 2014, 7pm</strong> ...<a href="reinhardbonnke.html">Read More</a></p>
               </div>
             </div>
             <div class="divider"></div>
