--- a/features.htm
+++ b/features.htm
@@ -139,14 +139,26 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
 <div class="bodytxt">
 <div id="articlepic">
                   <div class="photocredits2"> </div>
-                  <img src="https://fbcdn-sphotos-g-a.akamaihd.net/hphotos-ak-xpa1/v/t1.0-9/10451895_350900225059823_6761125903975480757_n.jpg?oh=b0745e5223596a06749abed7eb7e41c1&oe=54F54459&__gda__=1420978145_58b1f1717f884b3b4a53be269da8570d" alt="" height="75" aria-busy="false" aria-describedby="fbPhotosSnowliftCaption"><br>
+                  <img src="images/nycityservecityfest.jpg" width="149" height="75" alt="CityFest"><br>
           </div>
-                <h2>Our Nation's Racial Tension</h2>
-                <p>When I was  a young teen perhaps thirteen years old or so, my Father God blessed me to be  the one chosen to deliver the message for our <em>&ldquo;Youth Day&rdquo;</em> at <em>Mt. Lebanon  Baptist Church</em> in Peekskill, New York. I recall it    ...<a href="ads/achristianperspective.html">Read More</a></p>
+                <h2>NY&#8200;CityServe Movement </h2>
+                <p>Hundreds  of NYC-area nonprofit and church leaders &mdash; young and old, red and yellow, black and white&mdash;are mobilizing as one body for  the very first time in an effort to be the hands and feet of Jesus     ...<a href="nycityserve.html">Read More</a></p>
 <div id="articlepic">
                   <div class="photocredits2"> </div>
-                  <img src="images/americanbiblesociety.jpg" alt="" name="authorpic2" height="75" id="authorpic2" /><br>
+                  <img src="images/jack-redmond.jpg" alt="" name="authorpic" width="76" height="75" id="authorpic4" /><br>
           </div>
+                <h2>Build Your Legacy Now</h2>
+                <p>Building  legacy is a pro&shy;cess. If you want your life to make a difference now and for  generations to come, the more you build now, the more people you will impact for decades to come!    ...<a href="buildyourlegacy.html">Read More</a></p>
+<div id="articlepic">
+                  <div class="photocredits2"> </div>
+                  <img src="images/rich-perez.jpg" alt="Rich Perez" name="authorpic" width="74" height="75" id="authorpic6" /><img src="images/basic-worship.jpg" width="76" height="75" alt="Basic Worship"><br>
+          </div>
+                <h2>BASICCon</h2>
+                <p><strong>BASIC</strong> stands for &quot;<strong>Bro&shy;thers and Sisters in Christ</strong>.&quot;  We are a network of college students &amp; churches in the Northeast that meet  to enjoy life toge&shy;ther, learn about God, and make a difference ...<a href="basiccon.html">Read More</a></p>
+                <div id="articlepic">
+                  <div class="photocredits2"> </div>
+                  <img src="images/americanbiblesociety.jpg" alt="" name="authorpic2" height="75" id="authorpic2" /><br>
+        </div>
                 <h2>American Bible Society </h2>
                 <p>The <strong>American Bible Society's</strong>' stated  mission is to engage people &quot;with the life-changing message of God's  Word,&quot; and the 200-year-old Christian nonprofit appears to be pulling out  all the   ...<a href="ads/americanbiblesociety.html">Read More</a></p>
 <div id="articlepic">
@@ -158,32 +170,13 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
                   <div class="photocredits2"> </div>
                   <img src="images/elizabethmadison.jpg" alt="" name="authorpic" width="50" height="72" id="authorpic7" /><br>
           </div>
-                <h2>Antioxidants - Don't Believe All The Hype</h2>
-                <p>When working with a new client, I always ask if they are taking antioxidant supplements like vitamin A, E or beta-carotene. Their answer is usually yes. When I ask why they take these supplements, I get   ...<a href="elizabethmadison.html">Read More</a></p>
-<div id="articlepic">
+                <h2>Sugar Substitutes - Part One</h2>
+                <p>The media  and the internet are full of confusing and often contradictory information  about sugar substitutes, like Equal, Splenda and Stevia. Since God desires us  to be educated, as stated in Proverbs 18:15   ...<a href="elizabethmadison.html">Read More</a></p>
+                <div id="articlepic">
                   <div class="photocredits2"> </div>
-                  <img src="images/larnelleharris.jpg" alt="Larnelle Harris" name="authorpic" width="70" height="72" id="authorpic3" /><img src="images/stevegreen-sm.jpg" alt="Steve Green" width="74" height="72"><br>
-          </div>
-                <h2>Saviour - A Modern Oratorio</h2>
-                <p>On October 25, 2014, 6pm, Carnegie Hall will be the site of a historic sacred concert...the 20th Anniversary Performance of SAVIOUR: A Modern Oratorio, featuring the original recording artists  ...<a href="saviourmodernoratorio.html">Read More</a></p>
-<div id="articlepic">
-                  <div class="photocredits2"> </div>
-                  <div style="float:right; text-align:right; height:75px; width:100px; overflow:hidden;"><img src="images/naomi-rose-lictro.jpg" alt="" name="authorpic" height="120" id="authorpic8" /></div></div>
+                  <img src="images/first-thanksgiving-big.jpg" alt="First Thanksgiving portrait" height="70">                </div>
                 <h2>I Am Better Off Today - Spiritually</h2>
                 <p>Say this  out loud with me &ldquo;Spiritually, I am better off today since I first accepted  Jesus as my personal Saviour. Do I remember the day, month, and year and where  I was. What state of mind I was in; Did my    ...<a href="roselictro.html">Read More</a></p>
-                <div id="articlepic">
-                  <div class="photocredits2"> </div>
-                  <div style="float:right; text-align:right; height:75px; width:100px; overflow:hidden;"><img src="images/revmacpier.png" alt="" name="authorpic" width="75" id="authorpic" /></div>
-                  <br>
-      </div>
-                <h2>Talk Is Cheap!</h2>
-                <p>On October  23, 2014, The New York City Leadership Center will host what is becoming the  fastest growing and most influential gathering of urban ministry leaders in the  country. In a few short months, ...<a href="movementday-mac-pier.html">Read More</a></p>
-                <div id="articlepic">
-                  <div class="photocredits2"> </div>
-                  <img src="images/jacobburgei2.jpg" width="81" height="75" alt="Jacob Burgei"><br>
-      </div>
-                <h2>Fuel Conference-Oct. 10th-12th</h2>
-                <p>It is our heart to unite for one  purpose, one passion, and one movement with thousands to change the lives of  this next generation,&rdquo; said <strong>Jacob</strong> <strong>Burgei</strong>, the founder of Fuel. &ldquo;We want  to see lives ...<a href="fuel-conference2.html">Read More</a></p>
 </div>
             </div>
           <!--SECTION LEFT BEGIN-->
