--- a/index.htm
+++ b/index.htm
@@ -87,17 +87,15 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
         </div> 
         <div id="nav_adspace"> <!-- InstanceBeginEditable name="adSpace" -->
          <hr>
-         <a href="http://www.fuelconf.com/default.htm" target="_blank"><img src="ads/fuelconference.jpg" width="125" height="250"></a>
+         <a href="#" target="_blank" onClick="MM_openBrWindow('ads/calvarycathedralad.html','','scrollbars=yes,width=785,height=800');return false"><img src="ads/calvary-cathedral-of-praise-banner.jpg" width="125" height="250"></a>
          <hr>
-<a href="#" onClick="MM_openBrWindow('ads/anightformiracles.html','','scrollbars=yes,width=510,height=645')"><img src="ads/anightofmiraclebanner.jpg" width="125" height="125"></a>
+<a href="#" onClick="MM_openBrWindow('ads/decemberdeadlinead.html','','scrollbars=yes,width=500,height=423')"><img src="ads/december-deadline-banner.jpg" alt="December Ad Deadline" width="125" height="125"></a>
          <hr>
          <a href="" onClick="MM_openBrWindow('ads/pasterspraysummitad.html','','scrollbars=yes,width=500,height=648'); return false;"><img src="ads/prayersummitbanner.jpg" alt="Calvary Baptist" width="125"></a>
           <hr>
-          <a href="javascript:void(0);" onClick="MM_openBrWindow('ads/solemnassemblyad.html','','width=495,height=645')"><img src="ads/solemnassemblyaslpnbanner.jpg" alt="Solemn Assembly Ad" width="125" height="125"></a>
+          <a href="javascript:void(0);" onClick="MM_openBrWindow('ads/lovexpricelistad.html','','scrollbars=yes,width=855,height=700')"><img src="ads/specialholidaybanner.jpg" alt="Donna Baptist Ministries" width="125" height="125" ></a>
           <hr>
           <a href="javascript:void(0);"><img src="ads/donnabaptisteministriesbanner.jpg" alt="Donna Baptist Ministries" width="125" height="125" onClick="MM_openBrWindow('ads/donnabaptisteministriesad.html','','scrollbars=yes,width=495,height=644')"></a>
-          <hr>
-          <a href="javascript:void(0);" onClick="MM_openBrWindow('ads/lovexpricelistad.html','','scrollbars=yes,width=855,height=700')"><img src="ads/specialholidaybanner.jpg" alt="Donna Baptist Ministries" width="125" height="125" ></a>
           <hr>
           <a href="../www.veneekimpson.com/default.htm" target="_blank"><img src="ads/veneekimpsonbutton.jpg" alt="Venee Kimpson" width="125" height="60"></a>
           <hr>
@@ -153,17 +151,19 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
               <div class="divider"></div>
    <div id="" style="padding-left:10px; padding-top:10px;">   </div>
    <div class="bodytxt" style="padding:10px; background-color:#e8e2d6" >
-     <div class="imgdrop" style="float:left; margin-right:15px;" ><img src="https://fbcdn-sphotos-g-a.akamaihd.net/hphotos-ak-xpa1/v/t1.0-9/10451895_350900225059823_6761125903975480757_n.jpg?oh=b0745e5223596a06749abed7eb7e41c1&oe=54F54459&__gda__=1420978145_58b1f1717f884b3b4a53be269da8570d" alt="Fred Hammond" name="authorpic" width="267" height="200" id="authorpic2" /></div>
-     <p align="center" class="style14">Our Nation's <br>
-       Racial Tension</p>
-     <p style="margin:0 10px">When I was  a young teen perhaps thirteen years old or so, my Father God blessed me to be  the one chosen to deliver the message for our <em>&ldquo;Youth Day&rdquo;</em> at <em>Mt. Lebanon  Baptist Church</em> in Peekskill, New York. I recall it was a very volatile time  in our then small town, located in the beautiful Hudson River Valley of upper  New York State.    ... <a href="ads/achristianperspective.html">Read More</a></p>
+     <div style="text-align:center"><img src="images/nycityservecityfest.jpg" width="467" height="235" alt="CityFest"></div>
+     <p align="center" class="style14" style="margin-bottom:-15px;">NY&#8200;CityServe Movement</p>
+     <p align="center" class="style14"><span class="featurehead">Unites NYC's Youngblood Preachers, 
+Old Guards in <br>
+'Historic' Partnership</span></p>
+     <p style="margin:0 10px">Hundreds  of NYC-area nonprofit and church leaders &mdash; young and old, red and yellow, black and white&mdash;are mobilizing as one body for  the very first time in an effort to be the hands and feet of Jesus Christ in  one of the world's most unique ur&shy;ban centers, thanks to an initiative  organized by the Luis Palau Association    ... <a href="nycityserve.html">Read More</a></p>
     <div style="clear:both;"></div>            
    </div>
               <div class="divider"></div>
               
 
               <div id="body_adspace">
-              <div id="body_adspace"><a href="https://joysongsmusic.com/" target="_blank"><img src="ads/joysongbanner.jpg" width="468" height="60" alt="JoySong"></a></div>
+              <div id="body_adspace"><a href="thanksgivingdinners.html"><img src="ads/thanksgiving-banner.jpg" width="468" height="60" alt="Free Thanksgiving Dinners"></a></div>
               </div>
 
               <div class="divider"></div>
@@ -230,8 +230,20 @@ Donnie McClurkin
 
 <div id="articlepic">
                   <div class="photocredits2"> </div>
-                  <img src="images/americanbiblesociety.jpg" alt="" name="authorpic2" height="75" id="authorpic2" /><br>
+                  <img src="images/jack-redmond.jpg" alt="" name="authorpic" width="76" height="75" id="authorpic4" /><br>
           </div>
+                <h2>Build Your Legacy Now</h2>
+                <p>Building  legacy is a pro&shy;cess. If you want your life to make a difference now and for  generations to come, the more you build now, the more people you will impact for decades to come!    ...<a href="buildyourlegacy.html">Read More</a></p>
+<div id="articlepic">
+                  <div class="photocredits2"> </div>
+                  <img src="images/rich-perez.jpg" alt="Rich Perez" name="authorpic" width="74" height="75" id="authorpic6" /><img src="images/basic-worship.jpg" width="76" height="75" alt="Basic Worship"><br>
+          </div>
+                <h2>BASICCon</h2>
+                <p><strong>BASIC</strong> stands for &quot;<strong>Bro&shy;thers and Sisters in Christ</strong>.&quot;  We are a network of college students &amp; churches in the Northeast that meet  to enjoy life toge&shy;ther, learn about God, and make a difference ...<a href="basiccon.html">Read More</a></p>
+                <div id="articlepic">
+                  <div class="photocredits2"> </div>
+                  <img src="images/americanbiblesociety.jpg" alt="" name="authorpic2" height="75" id="authorpic2" /><br>
+        </div>
                 <h2>American Bible Society </h2>
                 <p>The <strong>American Bible Society's</strong>' stated  mission is to engage people &quot;with the life-changing message of God's  Word,&quot; and the 200-year-old Christian nonprofit appears to be pulling out  all the   ...<a href="ads/americanbiblesociety.html">Read More</a></p>
 <div id="articlepic">
@@ -243,14 +255,8 @@ Donnie McClurkin
                   <div class="photocredits2"> </div>
                   <img src="images/elizabethmadison.jpg" alt="" name="authorpic" width="50" height="72" id="authorpic7" /><br>
           </div>
-                <h2>Antioxidants - Don't Believe All The Hype</h2>
-                <p>When working with a new client, I always ask if they are taking antioxidant supplements like vitamin A, E or beta-carotene. Their answer is usually yes. When I ask why they take these supplements, I get   ...<a href="elizabethmadison.html">Read More</a></p>
-<div id="articlepic">
-                  <div class="photocredits2"> </div>
-                  <img src="images/larnelleharris.jpg" alt="Larnelle Harris" name="authorpic" width="70" height="72" id="authorpic3" /><img src="images/stevegreen-sm.jpg" alt="Steve Green" width="74" height="72"><br>
-          </div>
-                <h2>Saviour - A Modern Oratorio</h2>
-                <p>On October 25, 2014, 6pm, Carnegie Hall will be the site of a historic sacred concert...the 20th Anniversary Performance of SAVIOUR: A Modern Oratorio, featuring the original recording artists  ...<a href="saviourmodernoratorio.html">Read More</a></p>
+                <h2>Sugar Substitutes - Part One</h2>
+                <p>The media  and the internet are full of confusing and often contradictory information  about sugar substitutes, like Equal, Splenda and Stevia. Since God desires us  to be educated, as stated in Proverbs 18:15   ...<a href="elizabethmadison.html">Read More</a></p>
 
 <h4 id="articleTitle"><a href="features.htm">More Features &gt;&gt; </a></h4>
                         </div>
@@ -264,11 +270,10 @@ Donnie McClurkin
                   </div>
             </div>
               <hr style="width:444px;">
-              <a href="#" onClick ="MM_openBrWindow('ads/truenorthad.html','','scrollbars=yes,width=513,height=800'); return false; ")><img src="ads/truenorthsaviourbanner.jpg" alt="True North" width="452" height="57"></a>
               <hr style="width:444px;">
               <div class="editordesk">
                   <h4 id="articleTitle">Editor's desk: <a style="text-decoration:none;" href="editorial.html"><b> Editorial</b></a></h4>
-                  <p><b><i></i></b>Racism is easy to sweep under the rug, but churches are coming together to sweep out and expose racism in whatever form it comes in ... <a href="edithstranges.html">Read More</a></p>
+                  <p><b><i></i></b>It is a blessing to be living in this time to see what God is doing and accomplishing. It's a joy at 73 years of age to be seeing with my spiritual eyes all that God is putting toge&shy;ther ... <a href="edithstranges.html">Read More</a></p>
             </div>
 
                 <hr style="width:444px;">
@@ -287,36 +292,36 @@ Donnie McClurkin
                     <div id="sec_content_bdrright">
                       <div id="sec_content">
               <div class="bodytxt">
-                <div id="articlepic" style="height:75px; overflow:hidden;">
+                <div id="articlepic">
                   <div class="photocredits2"> </div>
-                  <img src="images/MacPier2.jpg" width="66" height="99" alt="Mac Pier"><br>
+                  <img style="border:1px #666 solid" src="authors/charlottehall.jpg" height="75" alt="Charlotte Hall" /><br>
     </div>
-                <h2>Movement Day</h2>
-                <p>Thousands of leaders will be gathering in the Marriott Marquis on October 23rd, 8am-5pm,for the Fifth Annual Move&shy;ment Day. Plenary Spea&shy;kers: Host Mac Pier, Sam Adams, Jim De&shy;nison, ...<a href="movementday-mac-pier.html">Read More</a></p>
-                <div id="articlepic" style="text-align: right; width:75px; height:85px; overflow:hidden;">
+                <h2>Silent No More!</h2>
+                <p>Hello  Beloved! Greetings in the last quarter of the year of 2014. Yes, time is  fleeting and here we are in the last quarter already. In the midst of these  dark days as the world continues to spiral out of <strong> </strong>...<a href="focuson.html">Read More</a></p>
+                <div id="articlepic">
                   <div class="photocredits2"> </div>
-                  <img style="margin-left:-30px;" src="images/jasonalvarez.jpg" alt="" width="119" height="119" id="authorpic10" /><br>
+                  <img src="images/donaldreid.jpg" alt="" height="75" /><br>
     </div>
-                <h2>A Night of Miracles Prayer/Healing/Praise </h2>
-                <p>Come join us for A Night of Miracles and powerful worship with Pastor Jason A&shy;l&shy;varez &amp; Friends and the Love of Jesus Family Church as we in&shy;vite you to a Special Night of Pra&shy;yer, Healing &amp; Praise <strong> </strong>...<a href="whatsnewforministrytraining.html">Read More</a></p>
-                <div id="articlepic" style="text-align: right; width:75px; height:85px; overflow:hidden;">
+                <h2>November Tax Tips!</h2>
+                <p>Ask for a New Year's bonus instead of a Christmas bonus. By delaying your bonus by only a week, you can push the payment of taxes on the income 15 months into the future -- a year ...<a href="donaldreid.html">Read More</a></p>
+                <div id="articlepic">
                   <div class="photocredits2"> </div>
-                  <img style="margin-left:-10px;" src="images/paulettepolo.jpg" alt="" name="authorpic" width="91" height="111" id="authorpic11" /><br>
+                  <img src="images/dr-michael-scales-and-dr-roy-s-kirton-img1464.jpg" width="158" height="75" alt="Nyack College Alumns"><br>
     </div>
-                <h2>W.O.W. Warriors of Worship Conf</h2>
-                <p>Mantle of Power / Paulette Polo Mi&shy;nistries presents W.O.W. Warriors of Wor&shy;ship Conference, Thurs&shy;day-Saturday, No&shy;vember 13th-15th with Don &amp; Chris&shy;tine Potter, Steve Swan&shy;son, Julie Meyer  <strong> </strong>...<a href="wowwarriorsconf.html">Read More</a></p>
-                <div id="articlepic" style="text-align: right; width:75px; height:85px; overflow:hidden;">
+                <h2>Nyack College </h2>
+                <p><strong>Dr. Michael Scales</strong>,  President of <strong>Nyack College</strong>,  presented <strong>Dr. Roy S. Kirton</strong> with the <strong>2014 Alumnus of the Year Award</strong>, for  his service to society<strong> </strong>...<a href="nyackcollege.html">Read More</a></p>
+                <div id="articlepic">
                   <div class="photocredits2"> </div>
-                  <img src="images/jaredanderson.jpg" alt="" name="authorpic12" width="111" height="110" id="authorpic12" style="margin-left:-15px;" /><br>
+                  <img src="images/bis-hez-walker-ms-gee-and-luis-palau.jpg" alt="" name="authorpic" width="108" height="75" id="authorpic" /><br>
     </div>
-                <h2>Joysongs Conference </h2>
-                <p>Abundant Life Wor&shy;ship Ctr. presents Joysongs Con&shy;fe&shy;rence, Friday, (Worship Night)-Saturday, (All Day Wor&shy;ship Training), Octo&shy;ber 10th-11th, with worship lea&shy;der &amp; songwriter Jared   <strong> </strong>...<a href="joysongconference.html">Read More</a></p>
-                <div id="articlepic" style="text-align: right; width:75px; height:85px; overflow:hidden;">
+                <h2>AllAroundTown </h2>
+                <p><strong>The First Stop</strong> was at <strong>Calvary Baptist Church</strong> in Manhattan,  where <strong>Pastor Epstein</strong> is the senior  Pastor, for the City serve-City Fest. This  ministry is hosted by the <strong>Luis  Palau Foundation</strong>. <strong> </strong>...<a href="allroundtown.html">Read More</a></p>
+                <div id="articlepic">
                   <div class="photocredits2"> </div>
-                  <img style="margin-left:-25px;" src="images/tdjakes.jpg" alt="" name="authorpic" width="142" height="160" id="authorpic13" /><br>
+                  <br>
     </div>
-                <h2>T. D. Jakes Coming to NY</h2>
-                <p>Glory of God Chris&shy;tian Center invites you to our Em&shy;po&shy;werment Summit 2014 (Sunday, November 30th @ 4pm and Monday, De&shy;cem&shy;ber 1st @ 10am &amp; 4pm) - with Bishop T. D. Jakes,   <strong> </strong>...<a href="tdjakesnewyork.html">Read More</a></p>
+                <h2>Justice's Men's Conference </h2>
+                <p>What is JusticeNYC? It's a men's conference featuring hundreds of men and over a dozen national organizations and churches that seek to combat sexual exploitation of women - whether that is    <strong> </strong>...<a href="justincemensconf.html">Read More</a></p>
                 <div id="articlepic">
                   <div class="photocredits2"> </div>
                   <br>
@@ -347,14 +352,45 @@ Donnie McClurkin
                         <div class="bodytxt">
                                 <div class="leftcol">
                                   <ol>
-                                    <li><a href="newsaroundthetristate.html#a1"><b>Men's Conf.</b></a></li>
-                                    <li><a href="newsaroundthetristate.html#a2"><b>Men for Jesus</b></a></li>
-                                    <li><a href="newsaroundthetristate.html#a3"><strong>Monk&rsquo;s Memorial</strong></a></li>
-                                    <li><a href="newsaroundthetristate.html#a4"><strong>59th Church  Anniv.</strong></a></li>
-                                    <li><a href="newsaroundthetristate.html#a4"><strong>Health Fair</strong></a></li>
+                                    <li><a href="newsaroundthetristate.html#a1"><b>Ministry Business Seminar</b></a></li>
+                                    <li><a href="newsaroundthetristate.html#a2"><b>Birthday Celebration</b></a></li>
+                                    <li><a href="newsaroundthetristate.html#a3"><strong>Women's Day</strong></a></li>
+                                    <li><a href="newsaroundthetristate.html#a4"><span class="qa">Shopping</span></a></li>
+                                    <li><a href="newsaroundthetristate.html#a4"><span class="qa">Clarion  Call-Women</span></a></li>
                                   </ol>
                                 </div>
                           <h4 id="articleTitle"><a href="upcomingevents.html">More News Around the Tri State&gt;&gt;</a></h4>
+</div>
+                      </div>
+                    </div>
+                  </div>
+                  <div id="section_bdrbottom">
+                    <div id="section_bottomleft"></div>
+                    <div id="section_bottomright"></div>
+                  </div>
+                </div>
+                <div id="sectionbox">
+                  <div id="sec_lable">
+                    <div id="sec_lableleft"></div>
+                    <div id="sec_lablectr">
+                      <p class="sectionheader">Upcoming Events</p>
+                    </div>
+                    <div id="sec_lableright"></div>
+                    <div id="sec_topright"></div>
+                  </div>
+                  <div id="sec_content_bdrleft">
+                    <div id="sec_content_bdrright">
+                      <div id="sec_content">
+                        <div class="bodytxt">
+                                <div class="leftcol">
+                                  <ol>
+                                    <li><a href="upcomingevents.html#a1"><b>Church Anniversary</b></a></li>
+                                    <li><a href="upcomingevents.html#a2"><b>Anniversary Banquet</b></a></li>
+                                    <li><a href="upcomingevents.html#a3"><b>Redeemed!</b></a></li>
+                                    <li><a href="upcomingevents.html#a4"><b>Benefit Concert</b></a></li>
+                                  </ol>
+                                </div>
+                          <h4 id="articleTitle"><a href="upcomingevents.html">More Upcoming&gt;&gt;</a></h4>
 </div>
                       </div>
                     </div>
