--- a/nycityserve.html
+++ b/nycityserve.html
@@ -2,7 +2,7 @@
 <html><!-- InstanceBegin template="/Templates/article.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>NY CityServe &amp; CityFest Launch</title>
+<title>NY CityServe Movement</title>
 <!-- InstanceEndEditable -->
 <meta http-equiv="refresh" content="600">
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -76,16 +76,98 @@ AC_FL_RunContent( 'codebase','http://download.macromedia.com/pub/shockwave/cabs/
         <!--SECTION LEFT BEGIN-->
 <div class="bodytxt" id="articlebody">
             <div><img src="images/nycityservecityfest.jpg" width="467" height="235" alt="CityFest"></div>
-            <h4 id="articleTitle"><br>
-              NY CityServe &amp; CityFest Launch</h4>
+            <h4 id="articleTitle">NY&#8200;CityServe Movement </h4>
+            <h4 class="qa">Unites NYC's Youngblood Preachers, <br>
+              Old Guards in 'Historic' Partnership</h4>
               <div id="authorname"><!--SECTION LEFT END-->
  </div>
-              <p>Save the  Date. Join with <strong>Luis Palau</strong>, <strong>A.R. Bernard</strong>, <strong>Jim Cymbala</strong>, and hundreds of other pastors and church leaders from  across New York City for the official launch of NY CityServe &amp; CityFest.  Mark your calendar for <strong>Tuesday</strong>, <strong>September 23rd</strong> at <strong>10am</strong> at <strong>Calvary Baptist Church</strong>. <strong>NY  CityServe &amp; CityFest Launch</strong> Event. Location: <strong>Calvary Baptist Church</strong>, 123 West 57th Street, New York,  NY 10019</p>
-              <p>Learn more about this exciting  initiative. Hear from a handful of city leaders. And help launch a powerful movement involving hundreds of churches and  organizations coming together to serve the city and share the Good News in a  sustainable way.</p>
-              <p>This will be a time to gather as leaders  and cast a vision for our city. Don't miss this historic gathering as we work  together to impact all of New York City with the Good News of Jesus Christ.</p>
-              <p>NYC  Launch Event</p>
-              <p>Join with pastors and church leaders  from across New York City for the official launch of NY CityServe &amp;  CityFest on Tuesday, September 23. Learn more about this exciting initiative.  Hear from a handful of city leaders. And help launch a powerful movement  involving hundreds of churches and organizations coming together to serve the  city and share the Good News in a sustainable way.</p>
-              <p><strong><em>NY&#8200;CITYSERVE, 1865 Broadway, New  York, NY 10023. For further information please email us at info@nycityserve.org  or you can visit us at http://nycityserve.square space.com/launch.</em></strong>              </p>
+              
+              <p><img style="float:right;" src="images/ny-cityserve-launch.jpg" width="262" height="148" alt="CityFest">Hundreds  of NYC-area nonprofit and church leaders &mdash; young and old, red and yellow, black and white&mdash;are mobilizing as one body for  the very first time in an effort to be the hands and feet of Jesus Christ in  one of the world's most unique ur&shy;ban centers, thanks to an initiative  organized by the Luis Palau Association.</p>
+              <p>New York City has seen a surge in the  past decade or more of contemporary, Millennial - and usually white male-led churches, who stand in contrast, in  some ways, to the old guards who put down spiritual roots in the big city  decades ago.</p>
+              <p>Among the veteran lea&shy;ders are people like Jim Cymbala (Brooklyn  Tabernacle) and African-American pastors and civic leaders A.R. Bernard  (Christian Cultural Center) and Floyd Flake (Greater  Allen A.M.E. Cathedral), whose combined congregations  number more than 60,000 New Yorkers.</p>
+              <p>Add to the mix the thousands at Timothy Keller's Redeemer Presbyterian Church, Carter Conlon's  Times Square Church and James Nam Soo Kim's  Promise Church, and the number swells even more. There are also a myriad  of mostly-ethnic storefront churches that dot nearly every block in  culturally-rich enclaves across the city's five boroughs.</p>
+              <p>&quot;NYC is the melting pot, so it only  makes sense for the churches to come toge&shy;ther along with the nonprofits,&quot;  the Rev. Jordan Durso of Christ Tabernacle in the borough of Queens told The  Christian Post. Durso, outreach pastor at his parents' church, is also  executive director of the non-profit Lega&shy;cy Center.</p>
+              <p>Durso believes the Luis Palau  Association's CityServe initiative, ongoing in several cities since taking off  8 years ago in mostly liberal and secular Portland, Oregon, should be a model  for the entire world.</p>
+              <p>&quot;I'm excited about the Luis Palau  Association coming together, helping us get together, meet other people, other  organizations, and get involved with churches... I think that the ripple effect  is going to be enormous and people are gonna get helped physically, mentally  and of course spiritually, so I'm really excited,&quot; he added.</p>
+              <p>Kevin Palau, the main brain and momentum  behind CityServe, knows there is plenty to be excited about.</p>
+              <p>His support, like that of leaders in cities like Portland, Houston, San Diego, and others, was won by  the CityServe commitment to partner with  local governments to simply work to combat  homelessness, gang violence, and human trafficking, or to partner with local schools and get involved in  foster care systems. There are absolutely no  strings attached, explained Palau, who also emphasized that Gospel proclamation  would occur separately from service at a later time in an event called  CityFest.</p>
+              <p>&quot;When they see that, we're willing  to go serve in schools when you can't preach  in schools. That we're willing to serve  and makeover family homeless shelters when that may not be the place to  share the Good News,&quot; Palau said of unconditional acts of love being the  key to opening people's hearts. &quot;We have to, I think, earn the right to be  heard. We absolutely will share the Good News,  I don't want anyone to be confused about that.&quot; The purpose of  CityServe-CityFest has always been &quot;the one-two punch of serving with no  strings attached and then joyfully celebrating&quot; what churches are  accomplishing together.</p>
+              <p>Palau added, &quot;I think we've turned  the corner. I think that leaders like A.R. Bernard,  Floyd Flake, Jim Cymbala and Tim Keller and others have become convinced  this is maybe a kairos moment, an opportune time to unite the Body &mdash; both to  serve and to share the Good News for such a  time as this.&quot;</p>
+              <p align="center"><b>Old School Evangelist Pays Homage to His  Younger Peers</b></p>
+              <p>New York CityServe's youth aspect was also a point of interest at  Tuesday's launch, especially for Argen&shy;tina-born evangelist Luis Pa&shy;lau, who  was the biggest pull for Latino involvement in CityServe.</p>
+              <p>The elder  Palau, with his trademark humor and personable approach, poked fun at his young peers and their  contemporary ministry style, at one point saying that, &quot;To them a hymn  book is a wall where they project all this stuff.&quot;</p>
+              <p>But in the midst of his humor, Palau  expressed admiration for emerging church leaders,  though he noted that the label (in relation to the liberal Emerging  Church) initially gave the traditional and old school evangelist pause.</p>
+              <p>&quot;When the emerging church idea came up&mdash; thankfully the premise  disappeared. Those kinds of labels are  dangerous. But when it came up, me  being a defender of the faith, I got really nervous [and thought] 'All these  boys are gonna mess it up, you know.' And they come on the platform with broken  jeans that seem to be unwashed and they don't (comb)  their hair properly and it seems like they  haven't washed their hair for two weeks. And here they are, that's supposed to  be the new trend you know. But when you listen to what they say, they preach  the Gospel even better than some of the old timers like me.&quot;</p>
+              <p>The  79-year-old evange&shy;list added, &quot;I've been  to some of these conferences like the Q (Conference) and Catalyst. [There are]  about 5,000 or 6,000 young pastors, and I'm the old [one] in the crowd &hellip; You  listen to these young preachers, they really  preach the Word with an authority and a power that I think the middle  generation, between me and the young ones, we haven't done it as much. I don't think we should despair. I think we  should get excited about the young generation of preachers coming behind us,  who dress different from us.&quot;</p>
+              <p>Eliciting hardy laughs, Palau continued,  pointing to his attire: &quot;This is the way Saint Paul used to dress, in a  suit and a tie. &hellip;Who sanctified jeans? Who said jeans were the new robes of the  church?&quot;</p>
+              <p>But he pressed the hundreds gathered, representing more than 1,200  local CityServe churches, to take note of Millennials in ministry.</p>
+              <p>&quot;If you can look beyond the dress,  beyond the hair, beyond the beards, beyond the torn jeans, and badly-shaped  shoes and all that... there is (power) in the young generation&hellip; Some of you,  I'm not too sure that you believe that, but I do and I'm a stickler for  doctrine.&quot;</p>
+              <p>Kevin Palau, in his interview with CP  the day prior to NY CityServe's launch, explained the attraction for some of  hipster-oriented Christian leaders to the service initiative.</p>
+              <p>&quot;I'd say the younger church  planters that I can relate to &mdash; because Portland has a lot of those kinda, the  guys that are tattooed and pierced, the hipster kinda churches that fit in,  thank the Lord, with Williamsburg folks. They  love it, because they want to see cultural engagement,&quot; he said.  &quot;They want to see an ability for people that have been burned by the  church or have all these negative stereotypes to say, 'These churches seem to  have relationships across cultural lines.' That speaks to political correctness  today, and who other than the church can do that, ideally. And it speaks to  unconditional love, [which] is always a key to opening people's hearts.&quot;</p>
+              <p>The Rev. Que English, who leads Bronx  Christian Fellowship Church with husband Tim English, is founder of the NYC  Clergy Roundtable. English is also one of the dozens of local church leaders  serving on the NY CityServe advisory board. English, who leads the social  justice initiative for NY CityServe, told CP Tuesday that although the method  might be packaged in ways the older generation  are not used to, God's message was still being delivered.</p>
+              <p>The sanctuary at Calva&shy;ry Baptist Church  was completely filled, with some people even watching a live video feed from  the downstairs fellowship hall. The key words  for the day were excitement and vision. The launch began with a time of worship  led by Eric Marshall from Trinity Grace Church, Kevin Palau laid out the vision  and next steps of NY CityServe &amp; CityFest, and several NYC leaders,  including Rev. A.R. Bernard, Bi&shy;shop Hector Bonano, and Rev. Que English, shared the importance of seizing this unique  moment as we all move forward together.</p>
+              <p>NY CityServe will mobilize believers to  bring justice to broken systems and communities. Churches will partner with  organizations and community agencies who are devoted  to ending human trafficking in New York City, providing significant growth in  volunteerism and awareness. The faith  community will come alongside youth programs that work with the juvenile  justice system to care for the city&rsquo;s most vulnerable children. Believers from  across New York City will come together to bring work for justice that actively  addresses the needs of the poor and oppressed.</p>
+              <p>Faith  communities around the city will be mobilized to serve foster children, through  working with foster care organizations and encouraging greater involvement from  believers in the foster care system. Additionally, churches will collaborate  with city and community agencies to serve New York City&rsquo;s homeless population  by facilitating free health care resources and solutions for those living in  poverty. Throughout New York City, believers will work together to bring hope  to those without hope.</p>
+              <p>NY CityServe's Education focus  celebrates and accelerates community and school partnerships providing arts  programs, life skills, college pathways, mentoring, and more&mdash;celebrating the  75-plus partnerships that already exist, and accelerating momentum and impact  through doubling that number by the summer of 2015 and multiplying thereafter.  We embrace the long-range goal of at least 10% of New York City's 7100 churches  partnering with public schools to equip  students to achieve their God-given potential.  We will support that goal as a vehicle for awareness, volunteerism, and  deepening rela- tionships among school administrators and educators, community  members, pastors, ministry leaders, students, and families.</p>
+              <p>NY CityServe is rooted in the Biblical  values of justice, mercy, humility, unity and love, to be practiced through  collaborative projects celebrating the diversity of God's movement in New York City, in order to seek the peace of the  city for the glory of God. NY CityServe is impelled by the Gospel, connected to  churches, focused on neighborhoods, driven by relationships, and committed to  diversity.</p>
+              <p align="center"><b>Movement Objectives</b></p>
+              <p> <b>Develop</b> a long-term, sustainable effort to accelerate the impact of the Church in the  areas of justice, mercy, and education.</p>
+              <p> <b>Increase</b> collaboration among churches, non-profits, businesses, and the public sector to  address the core issues of the city through increased service.</p>
+              <p> <b>Mobilize</b> thousands of church-connected volunteers to  serve in the neighborhoods of NYC through unified initiatives.</p>
+              <p> <b>Accelerate  and celebrate</b> the impact of these church-connected collaborations by  sharing their stories on a widespread scale.</p>
+              <p> <b>Support</b> <b>and</b> <b>partner </b>with NY CityFest leadership for a free multicultural  festival (summer 2015) to celebrate the work that has been accomplished and  inspire greater church connected impact  through our city.</p>
+              <p align="center"><b>NY CityServe &amp; CityFest Executive  Committee</b></p>
+              <p>Rev. A.R.  Bernard | Christian Cultural Center </p>
+              <p>Bishop  Hector Bonano | CONLICO </p>
+              <p>Hector  Chiesa | Church of God of Third Avenue </p>
+              <p>Bob Doll  | Nuveen Asset Management </p>
+              <p>Jennifer  Jones Austin | Federation of Protestant Welfare Agencies</p>
+              <p>Kittim  Silva Bermudez | Pentecostal Church of Jesus Christ of Queens</p>
+              <p>Bishop  Nam Soo Kim | Promise Church</p>
+              <p>Manuel  Alvarez | Assemblies of God </p>
+              <p>Adam  Durso | Christ Tabernacle</p>
+              <p>Robert  Guerrero | Redeemer City to City </p>
+              <p>Cesar  Perez | The Church of God Pentecostal Movement</p>
+              <p>Mac Pier  | New York City Leadership Center </p>
+              <p>Victor Rios | Southern Baptist Churches</p>
+              <p>Rev.  Gabriel Salguero | National Latino Evangelical Co&shy;alition </p>
+              <p>Johanna  Sheridan | Grace and Mercy Foundation</p>
+              <p>Althea  Taylor | Bronx Be&shy;tha&shy;ny Church of the Nazarene</p>
+              <p align="center"><b>NY CityServe Leadership Team</b></p>
+              <p>Enid  Almanazar | American Bible Society</p>
+              <p>Ruben  Austria | Community Connections for Youth</p>
+              <p>David  Beidel | Urban Hope NYC</p>
+              <p>James Betts | Salvation Army</p>
+              <p>Michael  Carrion | Promised Land Covenant Church</p>
+              <p>Elise  Chong | Hope For NY</p>
+              <p>Larry  Christensen | CRU</p>
+              <p>Edwin  Colon | Recovery House of Worship</p>
+              <p>Paul Coty  | Young Life</p>
+              <p>Jeremy  Del Rio | 20/20 Vision for Schools</p>
+              <p>Eric Diaz  | Empire Mentoring</p>
+              <p>Nicky  Edness | The Greater Allen AME Cathedral of NY</p>
+              <p>Que  English | New York City Clergy Roundtable</p>
+              <p>Rev. Joel  Gibson | Federation of Protestant Welfare Agencies</p>
+              <p>Vivian  Grubb | Christian Association of Youth Mentoring</p>
+              <p>Robert  Guerrero | Redeemer City to City</p>
+              <p>Donnell  Harper | New Co&shy;ve&shy;nant Temple</p>
+              <p>Greg Jao  | InterVarsity</p>
+              <p>David Kim  | CMDA Greater NYC</p>
+              <p>Glen  Kleinknecht | CRU</p>
+              <p>Diana Mao  | Nomi Network</p>
+              <p>Craig  Mayes | NY Rescue Mission</p>
+              <p>Peter Ong  | Living Faith Community Church</p>
+              <p>Rich  Rivera | Restoration Church</p>
+              <p>Al Taylor  | Infinity Mennonite Church</p>
+              <p>Althea  Taylor | Bronx Be&shy;tha&shy;ny Church of the Nazarene</p>
+              <p>Mitchell  Torres | Harvest Fields Community Church</p>
+              <p>Redd  Sevilla | New Life Fellowship Church</p>
+              <p>Dan  Stoltzfus | The Bowery Mission</p>
+              <p>David  Turk | Nyack College &amp; Alliance Theological Semi&shy;nary</p>
+              <p>Guy Wasko  | Trinity Grace Church - East Village</p>
+              <p>Shandra  Woworuntu | Voi&shy;ces of Hope </p>
+              <p> <b><i>Reprinted  from Christian post.com and Luis Palau Web, and NY CityServe &amp; CityFest.</i></b></p>
+
 </div>
           <div id="body_adspace"></div>
           <!-- InstanceEndEditable --> 
